:bug: bug: make sur the product phrase doesn't go outside product card container so it never ggets cut off by parent elements with overflow hidden

--- a/dev/scss/snippets/product-card.scss
+++ b/dev/scss/snippets/product-card.scss
@@ -34,7 +34,7 @@
     text-align: center;
     right: 10%;
     top: 0;
-    transform: rotate(5deg);
+    transform: rotate(5deg) translateY(30%);
     z-index: 2;
 
     + * {
